--- a/docs/translations/da/da.json
+++ b/docs/translations/da/da.json
@@ -145,6 +145,7 @@
   "keyChangeTitleExpired": "Hoved-nøgle udløbet",
   "keyChangeMessageExpired": "Hoved-nøglen for denne database er udløbet. Skriv venligst en ny nøgle",
   "keyChangeRepeatPassword": "Kodeord, en gang til",
+  "keyEnter": "Skriv",
   "iconFavTitle": "Download og brug hjemmesidens favicon",
   "iconSelCustom": "Vælg tilpasset ikon",
   "listEmptyTitle": "Tomt",
@@ -231,6 +232,12 @@
   "detHistoryNoTitle": "ingen titel",
   "detHistoryCurState": "nuværende tilstand",
   "detHistoryCurUnsavedState": "nuværende ugemte tilstand",
+  "detHistoryRevertAlert": "Gå tilbage til denne tilstand i historien?",
+  "detHistoryRevertAlertBody": "Den nuværende tilstand vil blive gemt i historien.",
+  "detHistoryDeleteAlert": "Slet denne historie tilstand?",
+  "detHistoryDeleteAlertBody": "Du vil ikke kunne gendanne den.",
+  "detHistoryDiscardChangesAlert": "Annuller ændringer lavet til punkt?",
+  "detHistoryDiscardChangesAlertBody": "Ugemte ændringer mistes, der er ingen vej tilbage.",
   "detBackToList": "tilbage til liste",
   "detSetIconColor": "Skift farve",
   "detSetIcon": "Skift ikon",
@@ -287,6 +294,8 @@
   "detOtpQrErrorBody": "Beklager, vi kunne ikke læse QR-koden, prøv igen, eller kontakt appforfatterne med fejloplysninger.",
   "detOtpQrWrong": "Forkert QR kode",
   "detOtpQrWrongBody": "Din QR kode blev fint skannet men den indeholder ikke engangskode-data",
+  "detLockField": "Lås dette felt, så dets indhold ikke er søgbart eller synligt. Det kræves at man eksplicit klikker på det for at kunne se det.",
+  "detUnlockField": "Lås dette felt op, så dets indhold bliver søgbart og umiddelbart synligt.",
   "autoTypeEntryFields": "Indtastningsfelter",
   "autoTypeModifiers": "Funktionstaster",
   "autoTypeKeys": "Taster",
@@ -299,6 +308,9 @@
   "autoTypeMsgNoWindow": "Vi kunne ikke få fat i det aktive vindues titel, skriv for at søge",
   "autoTypeMsgMatchedByWindow": "Vælg et kodeord for {}",
   "autoTypeNoMatches": "intet fundet",
+  "autoTypeSelectionHint": "Skriv autotaste-sekvensen",
+  "autoTypeSelectionHintAction": "Skriv kun kodeordet",
+  "autoTypeSelectionHintOpt": "Skriv kun brugernavnet",
   "appSecWarn": "Ikke sikret!",
   "appSecWarnBody1": "Du har indlæst denne app med en usikker forbindelse. Nogen kunne overvåge dig og stjæle dine kodeord. Vi anbefaler på det stærkeste at du stopper, med mindre du forstår præcist hvad du gør.",
   "appSecWarnBody2": "Ja, din database er krypteret men ingen kan garantere at app'en ikke er blevet modificeret på vejen hen til dig.",
@@ -367,6 +379,10 @@
   "setGenTableView": "Postliste tabelvisning",
   "setGenColorfulIcons": "Faverige tilpassede ikoner i listen",
   "setGenFunction": "Funktion",
+  "setGenAutoSyncOnClose": "Gem og synkroniser automatisk ved lukning",
+  "setGenAutoSyncTimer": "Gem og synkroniser periodisk",
+  "setGenAutoSyncTimerOff": "Slået fra",
+  "setGenAutoSyncTimerInterval": "Hver {} minutter",
   "setGenRememberKeyFiles": "Husk nøglefiler",
   "setGenNoRememberKeyFiles": "Husk ikke",
   "setGenRememberKeyFilesData": "Gen i dee interne app lager",
@@ -403,13 +419,17 @@
   "setFileSaveTo": "Gem til...",
   "setFileClose": "Luk",
   "setFileSync": "Synk",
+  "setFileSyncVerb": "Synk",
   "setFileSaveToXml": "XML",
   "setFileLastSync": "Sidste synk",
   "setFileLastSyncUnknown": "ukendt",
   "setFileSyncInProgress": "synkronisering igang",
   "setFileSyncError": "Synk-fejl",
   "setFilePass": "Hovedadgangskode",
+  "setFileConfirmPass": "Bekræft master kodeord",
+  "setFilePassChange": "for at ændre dit kodeord, skriv det da i bekræftelsesfeltet",
   "setFilePassChanged": "dit kodeord blev ændret, efterlad feltet blankt for at bruge det gamle kodeord",
+  "setFilePassNotMatch": "kodeordene er ikke ens, skriv det venligst igen",
   "setFileKeyFile": "Nøglefil",
   "setFileSelKeyFile": "Vælg en nøglefil",
   "setFileNames": "Navne",
@@ -425,6 +445,8 @@
   "setFileBackupNowWorking": "Arbejder...",
   "setFileBackupError": "Backup-fejl",
   "setFileBackupErrorDescription": "Fejl ved skrivning af backupfil",
+  "setFileBackupErrorIsDir": "Backupsti er ugyldig",
+  "setFileBackupErrorIsDirDescription": "Backupstien ser ud til at pege på en folder. Vælg venligst et filnavn inde i en folder i stedet for.",
   "setFileBackupOnSave": "Hver gang jeg gemmer filen",
   "setFileBackupDaily": "Dagligt",
   "setFileBackupWeekly": "Ugentligt",
@@ -534,6 +556,7 @@
   "dropboxLinkApp": "App mappe (Apps/KeeWeb)",
   "dropboxLinkFull": "Fuld Dropbox eller en mappe",
   "dropboxLinkCustom": "Egen Dropbox app",
+  "gdriveSharedWithMe": "Delt med mig",
   "webdavSaveMethod": "Gemme metode",
   "webdavSaveMove": "Upload en midlertidig fil og flyt",
   "webdavSavePut": "Overskriv kdbx fil med PUT",
