--- a/docs/translations/de-DE/de-DE.json
+++ b/docs/translations/de-DE/de-DE.json
@@ -123,7 +123,7 @@
   "tagExists": "Tag existiert bereits",
   "tagExistsBody": "Ein Tag mit diesem Namen ist bereits vorhanden. Bitte wählen Sie einen anderen Namen.",
   "tagBadName": "Ungültiger Name",
-  "tagBadNameBody": "Der Tag-Name darf nicht die folgenden Zeichen enthalten: {}",
+  "tagBadNameBody": "Der Tag-Name darf nicht die folgenden Zeichen enthalten: {}. Bitte entfernen Sie sie.",
   "genPsTitle": "Generator-Voreinstellungen",
   "genPsCreate": "Neue Voreinstellung",
   "genPsDelete": "Voreinstellung löschen",
@@ -145,6 +145,7 @@
   "keyChangeTitleExpired": "Hauptschlüssel abgelaufen",
   "keyChangeMessageExpired": "Der Hauptschlüssel für diese Datenkbank ist abgelaufen. Bitte geben Sie einen neuen Schlüssel ein.",
   "keyChangeRepeatPassword": "Passwort (Wiederholung)",
+  "keyEnter": "Enter",
   "iconFavTitle": "Website-Icon herunterladen und verwenden",
   "iconSelCustom": "Eigenes Icon auswählen",
   "listEmptyTitle": "Leer",
@@ -231,6 +232,12 @@
   "detHistoryNoTitle": "keine Bezeichnung",
   "detHistoryCurState": "aktuelle Version",
   "detHistoryCurUnsavedState": "aktuelle ungespeicherte Version",
+  "detHistoryRevertAlert": "Zu diesem Stand zurückkehren?",
+  "detHistoryRevertAlertBody": "Ihr aktueller Stand wird in der Historie gesichert.",
+  "detHistoryDeleteAlert": "Diesen Stand löschen?",
+  "detHistoryDeleteAlertBody": "Sie können ihn nicht wiederherstellen.",
+  "detHistoryDiscardChangesAlert": "Änderung verwerfen?",
+  "detHistoryDiscardChangesAlertBody": "Ungesicherte Änderungen sind unwiderruflich verloren.",
   "detBackToList": "zurück zur Liste",
   "detSetIconColor": "Farbe ändern",
   "detSetIcon": "Icon ändern",
@@ -287,6 +294,8 @@
   "detOtpQrErrorBody": "Der QR-Code konnte leider nicht eingelesen werden. Bitte versuchen Sie es noch einmal oder kontaktieren Sie den Hersteller mit Einzelheiten zum aufgetretenen Fehler.",
   "detOtpQrWrong": "Fehlerhafter QR-Code",
   "detOtpQrWrongBody": "Ihr QR-Code wurde erfolgreich eingelesen, enthält jedoch kein Einweg-Passwort.",
+  "detLockField": "Dieses Feld sperren, damit der Inhalt nicht durchsuchbar ist und angezeigt wird. Um ihn anzuzeigen, muss er angeklickt werden.",
+  "detUnlockField": "Dieses Feld entsperren. Dies führt dazu, dass der Inhalt direkt angezeigt wird und durchsuchbar ist.",
   "autoTypeEntryFields": "Feld-Platzhalter",
   "autoTypeModifiers": "Hilfstasten",
   "autoTypeKeys": "Tasten",
@@ -299,6 +308,9 @@
   "autoTypeMsgNoWindow": "Wir konnten den Titel des aktiven Fensters leider nicht auslesen. Fangen Sie einfach an zu tippen, um nach dem richtigen Eintrag zu suchen.",
   "autoTypeMsgMatchedByWindow": "Passwort auswählen für {}",
   "autoTypeNoMatches": "keine passenden Einträge",
+  "autoTypeSelectionHint": "Die Auto-Type Abfolge eintippen",
+  "autoTypeSelectionHintAction": "Nur das Passwort eintippen",
+  "autoTypeSelectionHintOpt": "Nur den Benutzernamen eintippen",
   "appSecWarn": "Unsichere Verbindung!",
   "appSecWarnBody1": "Sie haben diese App über eine ungesicherte Verbindung geöffnet, Sie könnten beobachtet und Ihre Passwörter könnten gestohlen werden. Wir empfehlen Ihnen dringend, die App hier nicht weiter zu nutzen, wenn Sie nicht genau wissen, was Sie tun.",
   "appSecWarnBody2": "Ihre Datenbank ist zwar verschlüsselt, aber es kann nicht sichergestellt werden, dass die App nicht auf dem Web vom Server zu Ihrem Browser manipuliert wurde.",
@@ -367,6 +379,10 @@
   "setGenTableView": "Einträge in Tabellenansicht anzeigen",
   "setGenColorfulIcons": "Eigene Icons in der Listenansicht farbig anzeigen",
   "setGenFunction": "Arbeitsweise",
+  "setGenAutoSyncOnClose": "Beim Schließen speichern und synchronisieren",
+  "setGenAutoSyncTimer": "Regelmäßig speichern und synchronisieren",
+  "setGenAutoSyncTimerOff": "Abgeschaltet",
+  "setGenAutoSyncTimerInterval": "Alle {} Minuten",
   "setGenRememberKeyFiles": "Schlüsseldateien merken",
   "setGenNoRememberKeyFiles": "Nicht merken",
   "setGenRememberKeyFilesData": "Im internen App-Speicher ablegen",
@@ -403,13 +419,17 @@
   "setFileSaveTo": "Speichern unter...",
   "setFileClose": "Sperren",
   "setFileSync": "Synchronisierung",
+  "setFileSyncVerb": "Synchronisieren",
   "setFileSaveToXml": "XML",
   "setFileLastSync": "Letzte Synchronisierung",
   "setFileLastSyncUnknown": "unbekannt",
   "setFileSyncInProgress": "Synchronisierung läuft",
   "setFileSyncError": "Synchronisierungsfehler",
   "setFilePass": "Master-Passwort",
+  "setFileConfirmPass": "Master-Passwort bestätigen",
+  "setFilePassChange": "Um das Passwort zu ändern, geben Sie es im Bestätigungsfeld an",
   "setFilePassChanged": "Das Passwort wurde geändert. Lassen Sie das Feld leer, um das bisherige Passwort zu behalten.",
+  "setFilePassNotMatch": "Die Passwörter stimmen nicht überein, bitte geben Sie sie erneut ein",
   "setFileKeyFile": "Schlüsseldatei",
   "setFileSelKeyFile": "Schlüsseldatei auswählen",
   "setFileNames": "Namen",
@@ -425,6 +445,8 @@
   "setFileBackupNowWorking": "Sichern...",
   "setFileBackupError": "Sicherungsfehler",
   "setFileBackupErrorDescription": "Fehler beim Schreiben der Sicherungsdatei",
+  "setFileBackupErrorIsDir": "Der Sicherungspfad ist ungültig",
+  "setFileBackupErrorIsDirDescription": "Der Sicherungspfad scheint ein Verzeichnis zu sein. Bitte geben Sie stattdessen einen Dateinamen ein.",
   "setFileBackupOnSave": "Immer, wenn die Datei gespeichert wird",
   "setFileBackupDaily": "Täglich",
   "setFileBackupWeekly": "Wöchentlich",
@@ -534,6 +556,7 @@
   "dropboxLinkApp": "App-Ordner (Apps/KeeWeb)",
   "dropboxLinkFull": "Gesamte Dropbox oder beliebiger Ordner",
   "dropboxLinkCustom": "Eigene Dropbox-App",
+  "gdriveSharedWithMe": "Mit mir geteilt",
   "webdavSaveMethod": "Speichermethode",
   "webdavSaveMove": "Eine temporäre Datei hochladen und verschieben",
   "webdavSavePut": "kdbx-Datei mittels PUT überschreiben",
