--- a/docs/translations/es-ES/es-ES.json
+++ b/docs/translations/es-ES/es-ES.json
@@ -14,18 +14,18 @@
     "Diciembre"
   ],
   "monthsShort": [
-    "Ene",
-    "Feb",
-    "Mar",
-    "Abr",
-    "May",
-    "Jun",
-    "Jul",
-    "Ago",
-    "Sep",
-    "Oct",
-    "Nov",
-    "Dic"
+    "Ene.",
+    "Feb.",
+    "Mar.",
+    "Abr.",
+    "May.",
+    "Jun.",
+    "Jul.",
+    "Ago.",
+    "Sep.",
+    "Oct.",
+    "Nov.",
+    "Dic."
   ],
   "weekdays": [
     "Domingo",
@@ -37,13 +37,13 @@
     "Sábado"
   ],
   "weekdaysShort": [
-    "Dom",
-    "Lun",
-    "Mar",
-    "Mié",
-    "Jue",
-    "Vie",
-    "Sáb"
+    "Dom.",
+    "Lun.",
+    "Mar.",
+    "Mié.",
+    "Jue.",
+    "Vie.",
+    "Sáb."
   ],
   "retToApp": "volver a aplicación",
   "name": "nombre",
@@ -145,6 +145,7 @@
   "keyChangeTitleExpired": "Contraseña maestra caducada",
   "keyChangeMessageExpired": "La contraseña maestra de esta base de datos ha caducado. Introduce una nueva contraseña",
   "keyChangeRepeatPassword": "Contraseña, una vez más",
+  "keyEnter": "Introducir",
   "iconFavTitle": "Descargar y usar el favicon del sitio web",
   "iconSelCustom": "Elegir icono personalizado",
   "listEmptyTitle": "Vacío",
@@ -231,6 +232,12 @@
   "detHistoryNoTitle": "sin título",
   "detHistoryCurState": "estado actual",
   "detHistoryCurUnsavedState": "estado sin guardar actual",
+  "detHistoryRevertAlert": "¿Revertir a este estado del historial?",
+  "detHistoryRevertAlertBody": "Tu estado actual será guardado en el historial.",
+  "detHistoryDeleteAlert": "¿Eliminar este estado del historial?",
+  "detHistoryDeleteAlertBody": "No podrás recuperarlo.",
+  "detHistoryDiscardChangesAlert": "¿Descartar cambios realizados a la entrada?",
+  "detHistoryDiscardChangesAlertBody": "Se perderán los cambios no guardados, no habrá forma de volver atrás.",
   "detBackToList": "volver a lista",
   "detSetIconColor": "Cambiar color",
   "detSetIcon": "Cambiar icono",
@@ -287,6 +294,8 @@
   "detOtpQrErrorBody": "Perdón, no pudimos leer el código QR, por favor, vuelve a intentarlo o contacta a los autores de la aplicación con detalles sobre el error.",
   "detOtpQrWrong": "Código QR erróneo",
   "detOtpQrWrongBody": "Se ha escaneado tu código QR pero no contiene información de contraseñas de un solo uso.",
+  "detLockField": "Bloquea este campo para que su contenido no sea visible ni localizable con una búsqueda. Para mostrar el contenido de este campo tendrás que hacer clic sobre él.",
+  "detUnlockField": "Desbloquea este campo para hacer su contenido visible y localizable con una búsqueda.",
   "autoTypeEntryFields": "Campos de entrada",
   "autoTypeModifiers": "Teclas modificadoras",
   "autoTypeKeys": "Teclas",
@@ -299,6 +308,9 @@
   "autoTypeMsgNoWindow": "No hemos podido obtener el título de la ventana activa, tecléalo o búscalo",
   "autoTypeMsgMatchedByWindow": "Seleccionar una contraseña para {}",
   "autoTypeNoMatches": "sin coincidencias",
+  "autoTypeSelectionHint": "Escribe la secuencia de autocompletado",
+  "autoTypeSelectionHintAction": "Solo escribe la contraseña",
+  "autoTypeSelectionHintOpt": "Solo escribe el usuario",
   "appSecWarn": "¡No seguro!",
   "appSecWarnBody1": "Has cargado esta aplicación mediante una conexión insegura. Alguien podría estar observando tu tráfico y robando tus contraseñas. Te aconsejamos no continuar, a no ser que comprendas perfectamente lo que estás haciendo.",
   "appSecWarnBody2": "Sí, tu base de datos está cifrada, pero nadie te puede garantizar que la aplicación no haya sido modificada antes de llegar a ti.",
@@ -367,6 +379,10 @@
   "setGenTableView": "Vista de tabla de lista de entradas",
   "setGenColorfulIcons": "Iconos coloridos customizados en lista",
   "setGenFunction": "Función",
+  "setGenAutoSyncOnClose": "Guardar y sincronizar automáticamente al cerrar",
+  "setGenAutoSyncTimer": "Guardar y sincronizar periódicamente de forma automática",
+  "setGenAutoSyncTimerOff": "Deshabilitado",
+  "setGenAutoSyncTimerInterval": "Cada {} minuto(s)",
   "setGenRememberKeyFiles": "Recordar archivos llave",
   "setGenNoRememberKeyFiles": "No recordar",
   "setGenRememberKeyFilesData": "Guardar en el almacenamiento interno",
@@ -403,13 +419,17 @@
   "setFileSaveTo": "Guardar a ...",
   "setFileClose": "Cerrar",
   "setFileSync": "Sincronizar",
+  "setFileSyncVerb": "Sincronizar",
   "setFileSaveToXml": "XML",
   "setFileLastSync": "Última sinc.",
   "setFileLastSyncUnknown": "desconocido",
   "setFileSyncInProgress": "sinc. en progreso",
   "setFileSyncError": "Error de sinc.",
   "setFilePass": "Contraseña maestra",
+  "setFileConfirmPass": "Confirmar contraseña maestra",
+  "setFilePassChange": "para cambiar tu contraseña, por favor escríbela en el campo de confirmación",
   "setFilePassChanged": "la contraseña ha cambiado; deja el campo en blanco para usar la contraseña anterior",
+  "setFilePassNotMatch": "las contraseñas no coinciden, por favor, escríbela de nuevo",
   "setFileKeyFile": "Archivo llave",
   "setFileSelKeyFile": "Escoge un archivo llave",
   "setFileNames": "Nombres",
@@ -425,6 +445,8 @@
   "setFileBackupNowWorking": "Trabajando...",
   "setFileBackupError": "Error respaldando",
   "setFileBackupErrorDescription": "Error guardando archivo de respaldo",
+  "setFileBackupErrorIsDir": "Ruta de respaldo inválida",
+  "setFileBackupErrorIsDirDescription": "La ruta de respaldo parece apuntar a un directorio. Por favor, cambia la ruta a un nombre de fichero dentro de un directorio.",
   "setFileBackupOnSave": "Cada vez que guardo el archivo",
   "setFileBackupDaily": "Diario",
   "setFileBackupWeekly": "Semanal",
@@ -534,6 +556,7 @@
   "dropboxLinkApp": "Carpeta de aplicación (Apps/KeeWeb)",
   "dropboxLinkFull": "Todo Dropbox o cualquier carpeta",
   "dropboxLinkCustom": "Aplicación Dropbox propia",
+  "gdriveSharedWithMe": "Compartido conmigo",
   "webdavSaveMethod": "Modo de guardado",
   "webdavSaveMove": "Subir un fichero temporal y mover",
   "webdavSavePut": "Sobreescribir fichero kdbx con PUT",
