--- a/docs/translations/fr-FR/fr-FR.json
+++ b/docs/translations/fr-FR/fr-FR.json
@@ -145,6 +145,7 @@
   "keyChangeTitleExpired": "Clé maître expirée",
   "keyChangeMessageExpired": "La clé maître pour cette base de donnée est expirée. Merci d'entrer une nouvelle clé",
   "keyChangeRepeatPassword": "Mot de passe, encore une fois",
+  "keyEnter": "Entrée",
   "iconFavTitle": "Télécharger et utiliser le favicon du site web",
   "iconSelCustom": "Sélectionner un icône personnalisé",
   "listEmptyTitle": "Vide",
@@ -231,6 +232,12 @@
   "detHistoryNoTitle": "sans titre",
   "detHistoryCurState": "état actuel",
   "detHistoryCurUnsavedState": "état actuel non sauvegardé",
+  "detHistoryRevertAlert": "Revenir à cet état de l'historique ?",
+  "detHistoryRevertAlertBody": "L'état courant sera sauvegardé dans l'historique.",
+  "detHistoryDeleteAlert": "Supprimer cet état de l'historique ?",
+  "detHistoryDeleteAlertBody": "Vous ne pourrez plus le restaurer.",
+  "detHistoryDiscardChangesAlert": "Oublier les changements fait à cette entrée ?",
+  "detHistoryDiscardChangesAlertBody": "Les changements non sauvegardés seront définitivement perdus.",
   "detBackToList": "retour vers liste",
   "detSetIconColor": "Changer de couleur",
   "detSetIcon": "Changer d'icône",
@@ -287,6 +294,8 @@
   "detOtpQrErrorBody": "Désolé le QR code ne peut pas être lu, essayez à nouveau ou contacter les auteurs de  l'application avec le détail de l'erreur.",
   "detOtpQrWrong": "Code QR incorrect",
   "detOtpQrWrongBody": "Votre QR code a été scanné avec succès mais il ne contient pas d'information pour un mot de passe à usage unique.",
+  "detLockField": "Verrouiller ce champ, ainsi son contenu ne sera pas visible ni ne pourra être cherché. Visualiser son contenu exigera de le cliquer explicitement.",
+  "detUnlockField": "Déverrouiller ce champ, rendant son contenu immédiatement visible et pouvant être cherché",
   "autoTypeEntryFields": "Champs",
   "autoTypeModifiers": "Touches modificatrices",
   "autoTypeKeys": "Clés",
@@ -299,6 +308,9 @@
   "autoTypeMsgNoWindow": "Nous n'avons pas pu obtenir le titre de la fenêtre active, commencez à taper pour rechercher",
   "autoTypeMsgMatchedByWindow": "Sélectionner un mot de passe pour {}",
   "autoTypeNoMatches": "aucun",
+  "autoTypeSelectionHint": "Saisissez la séquence automatique",
+  "autoTypeSelectionHintAction": "Entrez seulement le mot de passe",
+  "autoTypeSelectionHintOpt": "Entrez seulement le compte",
   "appSecWarn": "Non sécurisé !",
   "appSecWarnBody1": "Vous avez chargé cette appli avec une connexion non sécurisée. Quelqu'un peut vous observer et voler vos mots de passe. Nous vous recommandons fortement d'arrêter cette connexion, à moins que vous ne compreniez exactement ce que vous faites.",
   "appSecWarnBody2": "Oui, votre base est chiffrée mais personne ne peut garantir que l'application n'a pas été modifiée avant d'arriver à vous.",
@@ -367,6 +379,10 @@
   "setGenTableView": "Voir les entrées en liste",
   "setGenColorfulIcons": "Icônes en couleur dans la liste",
   "setGenFunction": "Opérations",
+  "setGenAutoSyncOnClose": "Sauvegarde et synchro automatique à la fermeture",
+  "setGenAutoSyncTimer": "Sauvegarde et synchro automatique régulièrement",
+  "setGenAutoSyncTimerOff": "Désactivé",
+  "setGenAutoSyncTimerInterval": "Toutes les {} minute(s)",
   "setGenRememberKeyFiles": "Se souvenir des fichiers clé",
   "setGenNoRememberKeyFiles": "Ne pas se souvenir",
   "setGenRememberKeyFilesData": "Sauvegarder dans le stockage interne de l'appli",
@@ -403,13 +419,17 @@
   "setFileSaveTo": "Enregistrer sous",
   "setFileClose": "Fermer",
   "setFileSync": "Sync",
+  "setFileSyncVerb": "Synchroniser",
   "setFileSaveToXml": "XML",
   "setFileLastSync": "Dernière synchro",
   "setFileLastSyncUnknown": "inconnu",
   "setFileSyncInProgress": "synchronisation en cours",
   "setFileSyncError": "Sync erreur",
   "setFilePass": "Mot de passe principal",
+  "setFileConfirmPass": "Confirmer le mot de passe Maître",
+  "setFilePassChange": "pour changer le mot de passe, merci de le saisir dans le champ Confirmation",
   "setFilePassChanged": "Le mot de passe a été changé ; laissez le champ vide pour utiliser l'ancien mot de passe",
+  "setFilePassNotMatch": "les mots de passe ne correspondent pas, veuillez  réessayer",
   "setFileKeyFile": "Fichier clé",
   "setFileSelKeyFile": "Sélectionner fichier clé",
   "setFileNames": "Noms",
@@ -425,6 +445,8 @@
   "setFileBackupNowWorking": "En cours...",
   "setFileBackupError": "Erreur sauvegarde",
   "setFileBackupErrorDescription": "Erreur à l'écriture du fichier",
+  "setFileBackupErrorIsDir": "Chemin de sauvegarde invalide",
+  "setFileBackupErrorIsDirDescription": "Le chemin de sauvegarde semble pointer sur un répertoire. Merci de spécifier un fichier dans un répertoire à la place.",
   "setFileBackupOnSave": "A chaque fois que je sauvegarde",
   "setFileBackupDaily": "Quotidien",
   "setFileBackupWeekly": "Chaque semaine",
@@ -534,6 +556,7 @@
   "dropboxLinkApp": "Dossier de l'appli (Apps/KeeWeb)",
   "dropboxLinkFull": "Tout Dropbox ou n'importe quel dossier",
   "dropboxLinkCustom": "Votre appli Dropbox",
+  "gdriveSharedWithMe": "Partagé avec moi",
   "webdavSaveMethod": "Méthode de sauvegarde",
   "webdavSaveMove": "Uploader un fichier temporaire et le déplacer",
   "webdavSavePut": "Ecraser le fichier kdbx avec PUT",
