--- a/docs/translations/ru-RU/ru-RU.json
+++ b/docs/translations/ru-RU/ru-RU.json
@@ -203,7 +203,7 @@
   "openUrl": "URL",
   "openUrlDesc": "https://server/path/file.kdbx, или просто file.kdbx",
   "openUser": "Логин",
-  "openUserDesc": "Пользователь WebDAV сервера (если требуется)",
+  "openUserDesc": "Пользователь сервера WebDAV (если требуется)",
   "openUserPlaceholder": "нет логина",
   "openPass": "Пароль",
   "openPassDesc": "Пароль сервера WebDAV  (это не пароль к вашему файлу)",
@@ -294,6 +294,8 @@
   "detOtpQrErrorBody": "Извините, мы не могли прочитать QR-код, повторите попытку или обратитесь к авторам приложения с подробными сведениями об ошибке.",
   "detOtpQrWrong": "Неверный QR-код",
   "detOtpQrWrongBody": "Ваш QR-код был успешно проверен, но он не содержит данных одноразового пароля.",
+  "detLockField": "Заблокируйте это поле, чтобы его содержимое не было доступно для поиска и не было видно. Для отображения содержимого потребуется явное нажатие на него.",
+  "detUnlockField": "Разблокируйте это поле, чтобы сделать его содержимое доступным для поиска и видимым",
   "autoTypeEntryFields": "Поля ввода",
   "autoTypeModifiers": "Клавиши-модификаторы",
   "autoTypeKeys": "Ключи",
@@ -306,6 +308,7 @@
   "autoTypeMsgNoWindow": "Не удалось получить заголовок активного окна, начните вводить текст для поиска",
   "autoTypeMsgMatchedByWindow": "Выберите пароль для {}",
   "autoTypeNoMatches": "нет совпадений",
+  "autoTypeSelectionHint": "Введите последовательность автозаполнения",
   "autoTypeSelectionHintAction": "Только введите пароль",
   "autoTypeSelectionHintOpt": "Только введите имя пользователя",
   "appSecWarn": "Не безопасно!",
@@ -443,6 +446,7 @@
   "setFileBackupError": "Ошибка резервного копирования",
   "setFileBackupErrorDescription": "Ошибка при записи файла резервной копии",
   "setFileBackupErrorIsDir": " Путь резервной копии неверный",
+  "setFileBackupErrorIsDirDescription": "Кажется, путь к резервной копии указывает на каталог. Пожалуйста, укажите имя файла внутри каталога.",
   "setFileBackupOnSave": "Каждый раз при сохранении файла",
   "setFileBackupDaily": "Ежедневно",
   "setFileBackupWeekly": "Еженедельно",
