--- a/docs/translations/zh-CN/zh-CN.json
+++ b/docs/translations/zh-CN/zh-CN.json
@@ -99,16 +99,16 @@
   "footerTitleGen": "生成",
   "footerTitleLock": "锁定",
   "genLen": "长度",
-  "genNewPass": "新建密码",
+  "genNewPass": "新设密码",
   "genPresetDefault": "默认预设",
-  "genPresetDerived": "同旧密码",
-  "genPresetPronounceable": "可拼读",
-  "genPresetMed": "中等长度",
-  "genPresetLong": "长",
-  "genPresetPin4": "4位 PIN",
-  "genPresetMac": "MAC 地址",
-  "genPresetHash128": "128位散列",
-  "genPresetHash256": "256位散列",
+  "genPresetDerived": "like old password",
+  "genPresetPronounceable": "pronounceable",
+  "genPresetMed": "medium length",
+  "genPresetLong": "long",
+  "genPresetPin4": "4-digit PIN",
+  "genPresetMac": "MAC address",
+  "genPresetHash128": "128-bit hash",
+  "genPresetHash256": "256-bit hash",
   "grpTitle": "分组",
   "grpSearch": "允许搜索此分组下的记录",
   "grpAutoType": "启用自动键入",
@@ -145,6 +145,7 @@
   "keyChangeTitleExpired": "主密钥已过期",
   "keyChangeMessageExpired": "该密码数据库密钥已过期，请输入新密钥",
   "keyChangeRepeatPassword": "密码，再输入一遍",
+  "keyEnter": "输入",
   "iconFavTitle": "下载并使用站点图标",
   "iconSelCustom": "选择自定义图标",
   "listEmptyTitle": "空",
@@ -185,7 +186,7 @@
   "openDropHere": "拖放文件到此处",
   "openFailedRead": "读取文件失败",
   "openNothingFound": "找不到内容",
-  "openNothingFoundBody": "没有可以打开的文件。",
+  "openNothingFoundBody": "我们还没有找到合适的文件。",
   "openSelectFile": "选择一个文件",
   "openSelectFileBody": "选择您想打开的文件",
   "openPassFor": "输入密码",
@@ -231,6 +232,12 @@
   "detHistoryNoTitle": "无标题",
   "detHistoryCurState": "当前状态",
   "detHistoryCurUnsavedState": "当前未保存状态",
+  "detHistoryRevertAlert": "恢复到这条历史记录？",
+  "detHistoryRevertAlertBody": "您当前的状态将保存到历史记录中。",
+  "detHistoryDeleteAlert": "删除这条历史纪录？",
+  "detHistoryDeleteAlertBody": "您无法恢复该记录。",
+  "detHistoryDiscardChangesAlert": "放弃变更并进入？",
+  "detHistoryDiscardChangesAlertBody": "未保存的变更将丢失，并无法找回。",
   "detBackToList": "返回列表",
   "detSetIconColor": "更改颜色",
   "detSetIcon": "更改图标",
@@ -287,18 +294,23 @@
   "detOtpQrErrorBody": "抱歉，我们无法读取此二维码，请再尝试一次，或者联系应用开发者并提供错误详情。",
   "detOtpQrWrong": "错误的二维码",
   "detOtpQrWrongBody": "您的二维码扫描成功，但未包含一次性密码数据。",
+  "detLockField": "锁定该字段，锁定后其内容将不可被搜索及不可见。如需显示相关内容，请单击该字段。",
+  "detUnlockField": "取消锁定该字段，使其内容立刻可被搜索及可见",
   "autoTypeEntryFields": "记录字段",
   "autoTypeModifiers": "修饰键",
   "autoTypeKeys": "按键",
   "autoTypeLink": "更多...",
   "autoTypeError": "自动输入出错",
   "autoTypeErrorGeneric": "自动输入时发生一个错误：{}",
-  "autoTypeErrorGlobal": "要使用系统全局的快捷键，请您在需要输入密码时切换至此应用",
+  "autoTypeErrorGlobal": "要使用系统范围的快捷方式，请将应用程序的焦点放在需要输入密码的位置",
   "autoTypeErrorNotInstalled": "未安装 {}",
   "autoTypeHeader": "自动输入：选择",
   "autoTypeMsgNoWindow": "我们无法获取当前窗口的标题，请手动输入以搜索",
   "autoTypeMsgMatchedByWindow": "请选择一个密码以用于{}",
-  "autoTypeNoMatches": "无匹配",
+  "autoTypeNoMatches": "没有匹配项",
+  "autoTypeSelectionHint": "输入自动类型序列",
+  "autoTypeSelectionHintAction": "仅输入密码",
+  "autoTypeSelectionHintOpt": "仅输入用户名",
   "appSecWarn": "不安全！",
   "appSecWarnBody1": "您已经通过不安全的连接加载当前应用，您有被监控和密码失窃的风险。我们强烈建议您停止使用，除非您清楚地了解自己在做什么。",
   "appSecWarnBody2": "是的，你的数据库是加密的，但无法保证保证您所获取的应用未被修改。",
@@ -367,11 +379,15 @@
   "setGenTableView": "以表格视图显示记录",
   "setGenColorfulIcons": "在列表中显示彩色图标",
   "setGenFunction": "功能",
+  "setGenAutoSyncOnClose": "在关闭程序时自动保存和同步",
+  "setGenAutoSyncTimer": "定时自动保存和同步",
+  "setGenAutoSyncTimerOff": "关闭",
+  "setGenAutoSyncTimerInterval": "每 {} 分钟",
   "setGenRememberKeyFiles": "记住密钥文件",
   "setGenNoRememberKeyFiles": "不记忆",
   "setGenRememberKeyFilesData": "保存在应用内",
   "setGenRememberKeyFilesPath": "只记住密钥文件路径",
-  "setGenLockInactive": "此应用未聚焦时自动锁定",
+  "setGenLockInactive": "退到后台自动锁定",
   "setGenNoAutoLock": "不自动锁定",
   "setGenLockMinutes": "在 {} 分钟后",
   "setGenLockHour": "在 1 个小时后",
@@ -403,13 +419,17 @@
   "setFileSaveTo": "保存到...",
   "setFileClose": "关闭",
   "setFileSync": "同步",
+  "setFileSyncVerb": "同步",
   "setFileSaveToXml": "XML",
   "setFileLastSync": "上次同步",
   "setFileLastSyncUnknown": "未知",
   "setFileSyncInProgress": "同步中",
   "setFileSyncError": "同步失败",
   "setFilePass": "主密码",
-  "setFilePassChanged": "密码已经更改；字段留空则继续使用旧密码",
+  "setFileConfirmPass": "确认主密码",
+  "setFilePassChange": "如要更改您的密码，请先在确认区域输入",
+  "setFilePassChanged": "您的密码已经更改；留空则继续使用原密码",
+  "setFilePassNotMatch": "密码不匹配，请重新输入",
   "setFileKeyFile": "秘钥文件",
   "setFileSelKeyFile": "选择一个密钥文件",
   "setFileNames": "密码数据库名称",
@@ -425,12 +445,14 @@
   "setFileBackupNowWorking": "备份中...",
   "setFileBackupError": "备份出错",
   "setFileBackupErrorDescription": "写入备份文件出错",
+  "setFileBackupErrorIsDir": "备份路径无效",
+  "setFileBackupErrorIsDirDescription": "备份路径似乎指向目录。请在目录中指定文件名。",
   "setFileBackupOnSave": "每次保存文件时",
   "setFileBackupDaily": "每日",
   "setFileBackupWeekly": "每周",
   "setFileBackupMonthly": "每月",
-  "setFileBackupManually": "手动，不自动备份",
-  "setFileRounds": "密钥加密遍数",
+  "setFileBackupManually": "手动，不使用自动备份",
+  "setFileRounds": "密钥加密强度",
   "setFileKdfParams": "密钥生成算法",
   "setFileKdfParamsIter": "迭代次数",
   "setFileKdfParamsMem": "内存占用，KB",
@@ -441,8 +463,8 @@
   "setFileUseOldKeyFile": "使用原密钥文件",
   "setFileGenKeyFile": "生成新的密钥文件",
   "setFileDontUseKeyFile": "不使用密钥文件",
-  "setFileEmptyPass": "空密码",
-  "setFileEmptyPassBody": "使用空密码保存的数据库完全不受保护。你确定要这么做？",
+  "setFileEmptyPass": "不使用密码",
+  "setFileEmptyPassBody": "不使用密码的数据库将完全不受保护。你确定要这么做？",
   "setFileSaveError": "保存出错",
   "setFileSaveErrorBody": "保存文件时出错",
   "setFileAlreadyExists": "已经存在",
@@ -453,7 +475,7 @@
   "setFileDontClose": "不要关闭",
   "setShTitle": "快捷键",
   "setShShowAll": "显示所有项",
-  "setShColors": "显示带颜色的项",
+  "setShColors": "显示有颜色的项",
   "setShTrash": "前往回收站",
   "setShFind": "搜索，或直接开始输入",
   "setShClearSearch": "清空搜索",
@@ -534,6 +556,7 @@
   "dropboxLinkApp": "应用文件夹(Apps/KeeWeb)",
   "dropboxLinkFull": "整个 Dropbox 或者任意文件夹",
   "dropboxLinkCustom": "自有 Dropbox 应用",
+  "gdriveSharedWithMe": "与我分享",
   "webdavSaveMethod": "保存方式",
   "webdavSaveMove": "上传一个临时文件并移动",
   "webdavSavePut": "以 PUT 方式覆盖文件",
