--- a/docs/translations/pt-BR/pt-BR.json
+++ b/docs/translations/pt-BR/pt-BR.json
@@ -52,11 +52,11 @@
   "password": "senha",
   "user": "usuário",
   "website": "site",
-  "tags": "tags",
+  "tags": "etiquetas",
   "notes": "notas",
   "entry": "entrada",
   "group": "grupo",
-  "noTitle": "Sem título",
+  "noTitle": "sem título",
   "or": "ou",
   "history": "histórico",
   "template": "modelo",
@@ -79,7 +79,7 @@
   "menuTrash": "Lixo",
   "menuSetGeneral": "Geral",
   "menuSetAbout": "Sobre",
-  "menuAlertNoTags": "Sem tags",
+  "menuAlertNoTags": "Sem etiquetas",
   "menuAlertNoTagsBody": "Você pode adicionar novas tags durante a edição de campos, na seção Tags.",
   "menuEmptyTrash": "Lixo",
   "menuEmptyTrashAlert": "Esvaziar o Lixo?",
@@ -369,6 +369,7 @@
   "setGenTableView": "Exibir a lista de inscrições",
   "setGenColorfulIcons": "Icones personalizados usam cor na lista",
   "setGenFunction": "Função",
+  "setGenAutoSyncTimer": "Salvar automaticamente e sincronizar periodicamente",
   "setGenAutoSyncTimerOff": "Desabilitado",
   "setGenRememberKeyFiles": "Lembrar dos arquivos de chaves",
   "setGenNoRememberKeyFiles": "Não lembrar",
@@ -406,12 +407,15 @@
   "setFileSaveTo": "Salvar em ...",
   "setFileClose": "Fechar",
   "setFileSync": "Sincronizar",
+  "setFileSyncVerb": "Sinc",
   "setFileSaveToXml": "XML",
   "setFileLastSync": "Última sincronização",
   "setFileLastSyncUnknown": "desconhecido",
   "setFileSyncInProgress": "sincronização em progresso",
   "setFileSyncError": "Erro de sincronização",
   "setFilePass": "Senha",
+  "setFileConfirmPass": "Confirme a senha mestra",
+  "setFilePassChange": "para mudar sua senha, por favor digite no campo de confirmação",
   "setFilePassChanged": "a senha foi trocada; deixe o campo em branco para usar a senha antiga",
   "setFilePassNotMatch": "Senha não coincide, por favor digite novamente",
   "setFileKeyFile": "Arquivo chave",
