--- a/docs/translations/tr/tr.json
+++ b/docs/translations/tr/tr.json
@@ -62,7 +62,7 @@
   "template": "Şablon",
   "notImplemented": "Uygulanmadı",
   "saveChanges": "Değişiklikleri onayla",
-  "discardChanges": "Değişiklikleri sil",
+  "discardChanges": "Değişiklikleri yoksay",
   "advanced": "Gelişmiş",
   "shortcuts": "Kısayollar",
   "help": "Yardım",
@@ -74,7 +74,7 @@
   "dropbox": "Dropbox",
   "gdrive": "Google Drive",
   "onedrive": "OneDrive",
-  "menuAllItems": "Tüm öğeler",
+  "menuAllItems": "Tüm ögeler",
   "menuColors": "Renkler",
   "menuTrash": "Çöp",
   "menuSetGeneral": "Genel",
@@ -231,6 +231,12 @@
   "detHistoryNoTitle": "başlık yok",
   "detHistoryCurState": "mevcut durum",
   "detHistoryCurUnsavedState": "mevcut kaydedilmemiş durum",
+  "detHistoryRevertAlert": "Bu geçmiş durumuna geri dön?",
+  "detHistoryRevertAlertBody": "Mevcut durumunuz tarihe kaydedilecektir.",
+  "detHistoryDeleteAlert": "Bu geçmiş durumu silinsin mi?",
+  "detHistoryDeleteAlertBody": "Bunu geri yüklemek mümkün olmayacaktır.",
+  "detHistoryDiscardChangesAlert": "Girişte yapılan değişiklikler iptal edilsin mi?",
+  "detHistoryDiscardChangesAlertBody": "Kaydedilmemiş değişiklikler kaybedilecek, geri dönüş olmayacak.",
   "detBackToList": "listeye geri dön",
   "detSetIconColor": "Rengi değiştir",
   "detSetIcon": "Simgeyi değiştir",
@@ -279,6 +285,7 @@
   "detSetupOtpManualButton": "Kodu el ile gir",
   "detSetupOtpScanButton": "Seç/Tara",
   "detSetupOtpAlertBodyWith": "{} ile",
+  "detOtpImageError": "Görüntü okunurken hata",
   "detOtpImageReading": "QR kod okunuyor...",
   "detOtpQrError": "QR kod tarama hatası",
   "detOtpQrErrorBody": "Üzgünüz, QR kodu okuyamadık, lütfen bir kez daha deneyin ya da uygulama yöneticisine hata detayı hakkında iletişime geçin.",
@@ -306,9 +313,11 @@
   "appCannotLockAutoInit": "Uygulama kilitlenemiyor çünkü otomatik kayıt devre dışı.",
   "appCannotLock": "Kaydedilmediği için kaybolacak değişiklikleriniz var. Deva ediyor musunuz?",
   "appAutoSave": "Değişiklikleri otomatik olarak kaydet",
+  "appSaveError": "Kayıt Hatası",
   "appNotSupportedError": "Tarayıcınız desteklenmiyor.",
   "appTabWarn": "Fazla sekme açıldı",
   "appTabWarnBody": "KeeWeb aynı anda iki tarayıcı sekmesinde kullanılamaz, lütfen bu sekmeyi kapatın.",
+  "setGenTitle": "Genel Ayarlar",
   "setGenDownloadingUpdate": "Güncelleme indiriliyor...",
   "setGenExtractingUpdate": "Güncelleme çıkartılıyor",
   "setGenCheckErr": "Yeni sürüm indirilirken bir hata oluştu",
@@ -337,7 +346,6 @@
   "setGenShowSubgroups": "Tüm alt gruplardan girdileri göster",
   "setGenTableView": "Girdileri tablo görünümünde listele",
   "setGenFunction": "Fonksiyon",
-  "setGenAutoSync": "Otomatik olarak kaydet ve eşzamanla",
   "setGenRememberKeyFiles": "Anahtar dosyalarını hatırla",
   "setGenNoRememberKeyFiles": "Hatırlama",
   "setGenRememberKeyFilesData": "Uygulama içinde sakla",
@@ -356,6 +364,13 @@
   "setGenTryBeta": "Yeniden başlatılana kadar beta versiyonu dene",
   "setGenTryBetaWarning": "kaydedilmemiş dosyalar",
   "setGenTryBetaWarningBody": "Lütfen tüm dosyaları kaydedin ve butona tekrar tıklayın",
+  "setFilePath": "Dosya yolu",
+  "setFileClose": "Kapat",
+  "setFileBackups": "Yedekler",
+  "setFileBackupPath": "Yedek yolu",
+  "setFileBackupDaily": "Günlük",
+  "setFileBackupWeekly": "Haftalık",
+  "setFileBackupMonthly": "Aylık",
   "setFileKdfParams": "Anahtar üretme işlevi",
   "setFileKdfParamsIter": "Tekrarlamalar",
   "setFileKdfParamsMem": "Bellek, KB",
@@ -408,6 +423,7 @@
   "setAboutBuilt": "Bu uygulama, bu müthiş araçlar ile oluşturuldu",
   "setAboutLic": "Lisans",
   "setAboutFirst": "Bu açık kaynak kodlu uygulama şu kişiler tarafından yaratıldı: {}",
+  "setHelpFormat": "Dosya Biçimi",
   "dropboxLinkApp": "Uygulama dosyası(Apps/KeeWeb)",
   "dropboxLinkFull": "Full Dropbox ya da dosya",
   "dropboxLinkCustom": "Kendi Dropbox uygulaması",
