--- a/docs/translations/meta.json
+++ b/docs/translations/meta.json
@@ -35,6 +35,12 @@
     "count": 500,
     "version": "1.6.0"
   },
+  "tr": {
+    "name": "Türkçe",
+    "nameEn": "Turkish",
+    "count": 393,
+    "version": "1.1.0"
+  },
   "pl": {
     "name": "Polski",
     "nameEn": "Polish",
@@ -87,7 +93,7 @@
     "name": "Français",
     "nameEn": "French",
     "count": 523,
-    "version": "1.10.0"
+    "version": "1.11.0"
   },
   "de-DE": {
     "name": "Deutsch",
